plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.kusitms'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
    // spring boot
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0'

    // postgresql
    runtimeOnly 'org.postgresql:postgresql'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // oauth2
    implementation 'org.springframework.security:spring-security-oauth2-client'
    // implementation platform('org.springframework.boot:spring-boot-dependencies:3.3.5')
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // netty macOS DNS (Apple Silicon)
    runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.2.12.Final:osx-aarch_64'

    // pgvector
    implementation 'com.pgvector:pgvector:0.1.6'

    // html scraping
    implementation 'org.jsoup:jsoup:1.18.3'

    // playwright (CSR 사이트 스크래핑)
    implementation 'com.microsoft.playwright:playwright:1.49.0'


    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // pdf parsing
    implementation 'org.apache.pdfbox:pdfbox:3.0.3'

    // jackson
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'io.micrometer:micrometer-registry-prometheus'
}

jar {
	enabled = false
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register('installGitHooks') {
	doLast {
		copy {
			from('.githooks')
			into('.git/hooks')
		}
		fileTree('.git/hooks').each { it.setExecutable(true) }
	}
}

build.dependsOn installGitHooks

spotless {
	java {
		googleJavaFormat()
		importOrder('java', 'javax', 'jakarta', 'org', 'com', '')
		removeUnusedImports()
		trimTrailingWhitespace()
		endWithNewline()
	}
}
